--- a/docs/css/docs.scss
+++ b/docs/css/docs.scss
@@ -1,8 +1,8 @@
 ---
-# Only the main Sass file needs front matter (the dashes are enough)
+# Only the docs Sass file needs front matter (the dashes are enough)
 ---
-@charset "utf-8";
 
+@charset "utf-8";
 
 
 // Our variables
@@ -28,8 +28,6 @@ $content-width:    800px;
 $on-palm:          600px;
 $on-laptop:        800px;
 
-
-
 // Use media queries like this:
 // @include media-query($on-palm) {
 //     .wrapper {
@@ -43,11 +41,5 @@ $on-laptop:        800px;
     }
 }
 
-
-
 // Import partials from `sass_dir` (defaults to `_sass`)
-@import
-        "base",
-        "layout",
-        "syntax-highlighting"
-;
+@import "docs/base", "docs/layout", "docs/syntax";
